Fixing touch-ebent on iphone

--- a/styles/categoreis.css
+++ b/styles/categoreis.css
@@ -83,6 +83,8 @@
         transition: all 250ms ease-in-out;
         font-size: 0.5rem;
         background-color: white;
+        pointer-events: all;
+        touch-action: all;
         
     }
     
